--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=tester
+
+# MongoDB connection (local example). Thay đổi URI nếu cần dùng Atlas hoặc host khác
+# Updated to non-deprecated Spring Boot properties
+spring.mongodb.uri=mongodb://localhost:27017/testerdb
+spring.mongodb.database=testerdb
